[fix bug 1162759] /whatsnew 38.0.5 (Pocket, Video) development

--- a/media/css/base/mozid-modal.less
+++ b/media/css/base/mozid-modal.less
@@ -69,7 +69,8 @@ html.noscroll body {
                     border: 2px solid #fff;
                     .transition(all 0.2s ease);
 
-                    &:hover {
+                    &:hover,
+                    &:focus {
                         .transform(scale(1.1));
                         box-shadow: none;
                     }
