[fix bug 1154786] Mozilla wordmark in footer repeating

--- a/media/css/mozorg/home/home.less
+++ b/media/css/mozorg/home/home.less
@@ -769,6 +769,10 @@ h1, h2, h3, h4, h5, h6 {
     box-shadow: none;
 }
 
+/*!
+  cache buster 04/23/2015 (bug 1154786)
+*/
+
 #colophon {
     margin: 0;
     background: #565a5c;
