--- a/bedrock/mozorg/templates/mozorg/plugincheck.html
+++ b/bedrock/mozorg/templates/mozorg/plugincheck.html
@@ -55,7 +55,7 @@
   {# L10n: This is the string used to indicate that the plugin is unknown #}
   data-unknown="{{ _('unknown') }}"
 
-  {% if l10n_has_tag('share_cta') -%}
+  {% if l10n_has_tag('plugin_outdated') -%}
     {# L10n: This is the string used to indicate that the plugin is outdated #}
     data-outdated="{{ _('outdated') }}"
   {% endif %}
