--- a/bedrock/firefox/templates/firefox/family/index.html
+++ b/bedrock/firefox/templates/firefox/family/index.html
@@ -19,6 +19,12 @@
 <![endif]-->
 {% endblock %}
 
+{% block optimizely %}
+  {% if waffle.switch('firefox-products-optimizely') %}
+     {% include 'includes/optimizely.html' %}
+  {% endif %}
+{% endblock %}
+
 {% block tabzilla_css %}{% endblock %}
 {% block tabzilla_js %}{% endblock %}
 
