Bug 1159522. Add Klif phone Senegal.

--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -82,6 +82,7 @@
           <option value="ph">{{ _('Philippines') }}</option>
           <option value="pl">{{ _('Poland') }}</option>
           <option value="ru">{{ _('Russia') }}</option>
+          <option value="sn">{{ _('Senegal') }}</option>
           <option value="rs">{{ _('Serbia') }}</option>
           <option value="za">{{ _('South Africa') }}</option>
           <option value="es">{{ _('Spain') }}</option>
@@ -2304,6 +2305,7 @@
 
                   <ul class="comma-list">
                     <li>{{ _('Madagascar') }}</li>
+                    <li>{{ _('Senegal') }}</li>
                   </ul>
 
                   <h5>{{ _('Operator') }}</h5>
