--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -230,6 +230,12 @@
             <li><a class="megafon" href="http://shop.megafon.ru/pathfinder.php?id=87125">MegaFon</a></li>
           </ul>
         </div>
+        <div class="provider" data-country="sn">
+          <h3>{{ _('Senegal') }}</h3>
+          <ul>
+            <li><a class="orange" href="COMING SOON?">Orange</a></li>
+          </ul>
+        </div>
         <div class="provider" data-country="sv">
           <h3>{{_('El Salvador')}}</h3>
           <ul>
