Bug 1160212. Fix Hello animation for high-res Android.
- Add "Try Hello" CTA to sticky nav.

--- a/bedrock/firefox/templates/firefox/hello/index.html
+++ b/bedrock/firefox/templates/firefox/hello/index.html
@@ -43,7 +43,9 @@ set share_urls = {
 {% block site_header %}{% endblock %}
 
 {% block site_header_unwrapped %}
-  {{ fxfamilynav('dark') }}
+  {% call fxfamilynav('dark') %}
+    <button id="try-hello-nav" class="try-hello">{{ _('Try Hello now') }}</button>
+  {% endcall %}
 {% endblock %}
 
 {% block tabzilla_css %}{% endblock %}
