--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -156,6 +156,19 @@
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/jascha-kaykas-wolff/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/jascha-kaykas-wolff.jpg') }}">
+          <span class="fn" itemprop="name">Jascha Kaykas-Wolff</span>
+        </a>
+        <span class="title" itemprop="jobTitle">{{ _('Chief Marketing Officer') }}</span>
+
+        <ul class="elsewhere">
+          <li><a class="url twitter" itemprop="url" href="https://twitter.com/kaykas">@kaykas</a></li>
+          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/kaykas/">{{ _('Mozillians profile') }}</a></li>
+        </ul>
+      </li>
+
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/mark-mayo/">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/mark-mayo.jpg') }}">
           <span class="fn" itemprop="name">Mark Mayo</span>
@@ -177,6 +190,20 @@
 
         <ul class="elsewhere">
           <li><a class="url book" itemprop="url" href="https://mozillians.org/u/maryellen/">{{ _('Mozillians profile') }}</a></li>
+        </ul>
+      </li>
+
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/nick-nguyen/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/nick-nguyen.jpg') }}">
+          <span class="fn" itemprop="name">Nick Nguyen</span>
+        </a>
+        <span class="title" itemprop="jobTitle">{{ _('VP, Product Strategy') }}</span>
+
+        <ul class="elsewhere">
+          <li><a class="url twitter" itemprop="url" href="https://twitter.com/osunick">@osunick</a></li>
+          <li><a class="url website" itemprop="url" href="http://osunick.com">osunick.com</a></li>
+          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/osunick/">{{ _('Mozillians profile') }}</a></li>
         </ul>
       </li>
 
