AP GTM integration - datalayer & loader
- Data attributes on links & elements
- DataLayer calls replace gaTrack() and various other classic GA
  integration.
  - Removed most legacy GA calls
  - Implemented GTM container + datalayer.push calls.
- Removes Tabzilla dataLayer pushes and data-attributes
-  Updates gaTrack method and associated test
- Updates after Mozilla Code Review
- Replace dataLayer pushes which contain eventCallback

--- a/bedrock/firefox/templates/firefox/desktop/_speed_graph.html
+++ b/bedrock/firefox/templates/firefox/desktop/_speed_graph.html
@@ -22,6 +22,6 @@
 {% trans url1=l10n_url.get(
     request.locale,
     'http://www.tomshardware.com/reviews/chrome-27-firefox-21-opera-next,3534.html') %}
-  * Based on <a href="{{ url1 }}">Tom’s Hardware Web Browser Grand Prix XVI</a> results.
+  * Based on <a data-interaction="outbound link" href="{{ url1 }}">Tom’s Hardware Web Browser Grand Prix XVI</a> results.
 {% endtrans %}
 </small>
