--- a/bedrock/firefox/templates/firefox/desktop/trust.html
+++ b/bedrock/firefox/templates/firefox/desktop/trust.html
@@ -70,7 +70,7 @@
             {{ _('Turn this feature on to protect your browsing history from others.') }}
           </p>
 
-          <a class="more" rel="external" href="https://support.mozilla.org/kb/private-browsing-browse-web-without-saving-info">{{ _('Learn how to open a private window') }}</a>
+          <a class="more" rel="external" data-interaction="outbound link" href="https://support.mozilla.org/kb/private-browsing-browse-web-without-saving-info">{{ _('Learn how to open a private window') }}</a>
         </li>
         {% if l10n_has_tag('forget_button') %}
         <li id="privacy-forget" class="last">
@@ -81,7 +81,7 @@
             {{ _('Use it when you’ve visited a site that you don’t want in your history.') }}
           </p>
 
-          <a class="more" rel="external" href="https://support.mozilla.org/kb/forget-button-quickly-delete-your-browsing-history">{{ _('Add the Forget Button to your toolbar') }}</a>
+          <a class="more" rel="external" data-interaction="outbound link" href="https://support.mozilla.org/kb/forget-button-quickly-delete-your-browsing-history">{{ _('Add the Forget Button to your toolbar') }}</a>
         </li>
         {% else %}
         <li id="privacy-lightbeam" class="last">
@@ -114,7 +114,7 @@
             {{ _('Use instant Website ID to make sure a site is what it claims to be and to check if your connection to it is secure.') }}
           </p>
 
-          <a class="more" rel="external" href="https://support.mozilla.org/kb/how-do-i-tell-if-my-connection-is-secure">{{ _('Learn more') }}</a>
+          <a class="more" rel="external" data-interaction="outbound link" href="https://support.mozilla.org/kb/how-do-i-tell-if-my-connection-is-secure">{{ _('Learn more') }}</a>
         </li>
         <li id="safe-protection">
           <h3>{{ _('World class protection') }}</h3>
@@ -123,7 +123,7 @@
             {{ _('Anti-phishing & anti-malware features protect you from trojan horses and spyware and warn you about potentially fraudulent sites.') }}
           </p>
 
-          <a class="more" rel="external" href="https://support.mozilla.org/kb/how-does-phishing-and-malware-protection-work">{{ _('Learn more') }}</a>
+          <a class="more" rel="external" data-interaction="outbound link" href="https://support.mozilla.org/kb/how-does-phishing-and-malware-protection-work">{{ _('Learn more') }}</a>
         </li>
         <li id="safe-updates" class="last">
           <h3>{{ _('Automatic security updates') }}</h3>
@@ -132,7 +132,7 @@
             {{ _('Firefox updates automatically to make sure you always have the latest and greatest security fixes.') }}
           </p>
 
-          <a class="more" rel="external" href="https://support.mozilla.org/kb/update-firefox-latest-version">{{ _('Learn more') }}</a>
+          <a class="more" rel="external" data-interaction="outbound link" href="https://support.mozilla.org/kb/update-firefox-latest-version">{{ _('Learn more') }}</a>
         </li>
       </ul>
     </div>
@@ -151,19 +151,19 @@
           <a href="http://www.mozilla.org/privacy/you/">{{ _('Privacy & you') }}</a>
         </li>
         <li>
-          <a rel="external" href="https://support.mozilla.org/kb/how-stay-safe-web">{{ _('How to stay safe online') }}</a>
+          <a rel="external" data-interaction="outbound link" href="https://support.mozilla.org/kb/how-stay-safe-web">{{ _('How to stay safe online') }}</a>
         </li>
         <li>
-          <a rel="external" href="https://support.mozilla.org/products/firefox/privacy-and-security">{{ _('Privacy & security FAQ') }}</a>
+          <a rel="external" data-interaction="outbound link" href="https://support.mozilla.org/products/firefox/privacy-and-security">{{ _('Privacy & security FAQ') }}</a>
         </li>
         <li>
-          <a rel="external" href="https://addons.mozilla.org/firefox/extensions/privacy-security/">{{ _('Privacy & security add-ons') }}</a>
+          <a rel="external" data-interaction="outbound link" href="https://addons.mozilla.org/firefox/extensions/privacy-security/">{{ _('Privacy & security add-ons') }}</a>
         </li>
         <li>
-          <a rel="external" href="https://blog.mozilla.org/privacy/">{{ _('Privacy blog') }}</a>
+          <a rel="external" data-interaction="outbound link" href="https://blog.mozilla.org/privacy/">{{ _('Privacy blog') }}</a>
         </li>
         <li>
-          <a rel="external" href="https://blog.mozilla.org/security/">{{ _('Security blog') }}</a>
+          <a rel="external" data-interaction="outbound link" href="https://blog.mozilla.org/security/">{{ _('Security blog') }}</a>
         </li>
       </ul>
     </div>
