--- a/bedrock/firefox/templates/firefox/sync-new.html
+++ b/bedrock/firefox/templates/firefox/sync-new.html
@@ -85,29 +85,29 @@
 
       <div class="buttons">
         <div class="show-fx-31-signed-in">
-          <a href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" class="sync-button green" id="cta-android">
+          <a href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" class="sync-button green" data-interaction="button click" data-element-action="Sync CTA" id="cta-android">
             {{ _('Download Firefox for Android') }}
           </a>
           <p class="button-footer">
-            <a href="https://support.mozilla.org/kb/how-do-i-set-up-firefox-sync" class="ga-link">
+            <a href="https://support.mozilla.org/kb/how-do-i-set-up-firefox-sync" class="ga-link" data-interaction="outbound link click"
               {{ _('Need help?') }}
             </a>
         </div>
 
         <div class="show-fx-31-signed-out">
-          <button class="sync-button" id="cta-sync">
+          <button class="sync-button" data-interaction="button click" data-element-action="Sync CTA"  id="cta-sync">
             {{ _('Get started with Sync') }}
           </button>
         </div>
 
         <div class="show-fx-29-30">
-          <a href="https://support.mozilla.org/kb/update-firefox-latest-version" class="sync-button" id="cta-update">
+          <a href="https://support.mozilla.org/kb/update-firefox-latest-version" class="sync-button" data-interaction="button click" data-element-action="Sync CTA" id="cta-update">
             {{ _('Update your Firefox') }}
           </a>
         </div>
 
         <div class="show-fx-28-older">
-          <a href="{{ url('firefox.new') }}?scene=2#download-fx" class="sync-button green" id="cta-firefox">
+          <a href="{{ url('firefox.new') }}?scene=2#download-fx" class="sync-button green" data-interaction="button click" data-element-action="Sync CTA" id="cta-firefox">
             {{ _('Download Firefox') }}
           </a>
         </div>
@@ -124,7 +124,7 @@
         <section>
           <ol>
             <li>{% trans url='https://support.mozilla.org/kb/learn-more-about-the-design-of-new-firefox' %}
-              Open the <a class="menu ga-link" href="{{ url }}#w_a-handy-new-menu">menu</a> in the top right of Firefox and select “<strong>Sign in to Sync.</strong>”
+              Open the <a class="menu ga-link" data-interaction="outbound link click" href="{{ url }}#w_a-handy-new-menu">menu</a> in the top right of Firefox and select “<strong>Sign in to Sync.</strong>”
             {% endtrans %}</li>
             {# L10n: <strong> tags below used for font color formatting. #}
             <li>{{ _('Click “<strong>Get started</strong>” in the tab that opens.') }}</li>
@@ -135,16 +135,16 @@
         </section>
         <aside role="complimentary">
           <ul class="unstyled">
-            <li><a class="more ga-link" href="https://support.mozilla.org/kb/how-do-i-set-up-firefox-sync">{{ _('Get more detailed instructions.') }}</a></li>
-            <li><a class="more ga-link" href="https://support.mozilla.org/kb/how-to-update-to-the-new-firefox-sync">{{ _('Using an older version of Sync?') }}</a></li>
+            <li><a class="more ga-link" data-interaction="outbound link click" href="https://support.mozilla.org/kb/how-do-i-set-up-firefox-sync">{{ _('Get more detailed instructions.') }}</a></li>
+            <li><a class="more ga-link" data-interaction="outbound link click" href="https://support.mozilla.org/kb/how-to-update-to-the-new-firefox-sync">{{ _('Using an older version of Sync?') }}</a></li>
           </ul>
         </aside>
       </div>
 
       <div class="show-fx-28-older instructions">
         <ul class="unstyled">
-          <li><a class="more ga-link" href="https://support.mozilla.org/kb/how-do-i-set-up-firefox-sync">{{ _('Get more detailed instructions.') }}</a></li>
-          <li><a class="more ga-link" href="https://support.mozilla.org/kb/how-to-update-to-the-new-firefox-sync">{{ _('Using an older version of Sync?') }}</a></li>
+          <li><a class="more ga-link" data-interaction="outbound link click" href="https://support.mozilla.org/kb/how-do-i-set-up-firefox-sync">{{ _('Get more detailed instructions.') }}</a></li>
+          <li><a class="more ga-link" data-interaction="outbound link click" href="https://support.mozilla.org/kb/how-to-update-to-the-new-firefox-sync">{{ _('Using an older version of Sync?') }}</a></li>
         </ul>
       </div>
 
@@ -164,8 +164,8 @@
         </section>
         <aside role="complimentary">
           <ul class="unstyled">
-            <li><a class="more ga-link" href="https://support.mozilla.org/kb/how-do-i-set-up-firefox-sync">{{ _('Get more detailed instructions.') }}</a></li>
-            <li><a class="more ga-link" href="https://support.mozilla.org/kb/how-to-update-to-the-new-firefox-sync">{{ _('Using an older version of Sync?') }}</a></li>
+            <li><a class="more ga-link" data-interaction="outbound link click" href="https://support.mozilla.org/kb/how-do-i-set-up-firefox-sync">{{ _('Get more detailed instructions.') }}</a></li>
+            <li><a class="more ga-link" data-interaction="outbound link click" href="https://support.mozilla.org/kb/how-to-update-to-the-new-firefox-sync">{{ _('Using an older version of Sync?') }}</a></li>
           </ul>
         </aside>
       </div>
@@ -212,7 +212,7 @@
     <div class="container">
       <header>
         <h3>{{ _('Have an <b>Android smartphone</b> or <b>tablet</b>?') }}</h3>
-        <a href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" class="sync-button green" id="cta-android-footer">
+        <a href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" class="sync-button green" data-interaction="button click" data-element-action="Sync CTA" id="cta-android-footer">
           {{ _('DOWNLOAD FIREFOX FOR ANDROID') }}
         </a>
       </header>
