--- a/bedrock/firefox/templates/firefox/desktop/_trust_badge.html
+++ b/bedrock/firefox/templates/firefox/desktop/_trust_badge.html
@@ -6,7 +6,7 @@
     {{ _('<span id="trust-line1">Most trusted</span> <span id="trust-line2">internet company</span> <span id="trust-line3">for privacy</span>') }}
 
   {% if show_link != false %}
-    <a class="more" rel="external" href="https://blog.mozilla.org/blog/2015/01/27/get-smart-on-international-data-privacy-day/">{{ _('Learn more') }}</a>
+    <a class="more" rel="external" data-interaction="outbound link" href="https://blog.mozilla.org/blog/2015/01/27/get-smart-on-international-data-privacy-day/">{{ _('Learn more') }}</a>
   {% endif %}
   </div>
 </div>
