--- a/bedrock/firefox/templates/firefox/desktop/tips.html
+++ b/bedrock/firefox/templates/firefox/desktop/tips.html
@@ -159,7 +159,7 @@
               <h4>{{ _('How to:') }}</h4>
               <p>
                 {{ _('Open the menu, select “<strong>Customize</strong>” and drag any button into the toolbar or menu.') }}
-                <a rel="external" href="https://support.mozilla.org/kb/customize-firefox-controls-buttons-and-toolbars?src=tips-arrange">
+                <a rel="external" data-interaction="outbound link" href="https://support.mozilla.org/kb/customize-firefox-controls-buttons-and-toolbars?src=tips-arrange">
                 {% if l10n_has_tag('sync_device_note') %}
                   {{ _('Learn more about customizing') }}
                 {% else %}
@@ -193,7 +193,7 @@
               <h4>{{ _('How to:') }}</h4>
               <p>
                 {{ _('Choose “<strong>Sign in to Sync</strong>” from the menu and make Firefox your own wherever you use it.') }}
-                <a rel="external" href="https://support.mozilla.org/kb/how-do-i-set-up-firefox-sync">
+                <a rel="external" data-interaction="outbound link" href="https://support.mozilla.org/kb/how-do-i-set-up-firefox-sync">
                 {% if l10n_has_tag('sync_device_note') %}
                   {{ _('Learn more about Sync') }}
                 {% else %}
@@ -223,7 +223,7 @@
               <h4>{{ _('How to:') }}</h4>
               <p>
                 {{ _('Select “<strong>Customize</strong>” from the menu and drag in the add-ons you want.') }}
-                <a rel="external" href="https://support.mozilla.org/kb/find-and-install-add-ons-add-features-to-firefox">
+                <a rel="external" data-interaction="outbound link" href="https://support.mozilla.org/kb/find-and-install-add-ons-add-features-to-firefox">
                 {% if l10n_has_tag('sync_device_note') %}
                   {{ _('Learn more about add-ons') }}
                 {% else %}
@@ -262,7 +262,7 @@
       <div id="footer-mobile">
         <ul>
           <li><a href="{{ url('firefox.desktop.index') }}">{{ _('Firefox Features') }}</a></li>
-          <li><a rel="external" href="https://support.mozilla.org/products/firefox">{{ _('Firefox Help') }}</a></li>
+          <li><a rel="external" data-interaction="outbound link" href="https://support.mozilla.org/products/firefox">{{ _('Firefox Help') }}</a></li>
         </ul>
       </div>
     </footer>
