Bug 1162101. FxOS Orange Klif Madagascar.

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -42,12 +42,6 @@
             <li><a class="movistar" href="http://www.movistar.cl/equipos/alcatel-fire-c">Alcatel One Touch Fire C</a></li>
           </ul>
         </div>
-        <div class="provider" data-country="za">
-          <h3>{{_('South Africa')}}</h3>
-          <ul>
-            <li><a class="mtn" href="https://shop.mtn.co.za/crs/browse/productFilter.jsp?brand=Alcatel">MTN</a></li>
-          </ul>
-        </div>
         <div class="provider" data-country="ch">
           <h3>{{_('Switzerland')}}</h3>
           <ul>
@@ -166,6 +160,12 @@
             <li><a class="t-mobile" href="http://www.telekom.me/product-details-updated.nspx?phoneid=673&amp;userType=2">Alcatel One Touch Fire C</a></li>
           </ul>
         </div>
+        <div class="provider" data-country="mg">
+          <h3>{{ _('Madagascar') }}</h3>
+          <ul>
+            <li><a class="orange" href="http://www.orange.mg/klif/">Orange</a></li>
+          </ul>
+        </div>
         <div class="provider" data-country="mk">
           <h3>{{ _('Macedonia') }}</h3>
           <ul>
@@ -246,6 +246,12 @@
           <h3>{{_('Venezuela')}}</h3>
           <ul>
             <li><a class="movistar" href="http://www.movistar.com.ve/movistar_firefox/index.html">Movistar</a></li>
+          </ul>
+        </div>
+        <div class="provider" data-country="za">
+          <h3>{{_('South Africa')}}</h3>
+          <ul>
+            <li><a class="mtn" href="https://shop.mtn.co.za/crs/browse/productFilter.jsp?brand=Alcatel">MTN</a></li>
           </ul>
         </div>
       </section>
