--- a/media/css/firefox/os/get_device.less
+++ b/media/css/firefox/os/get_device.less
@@ -171,6 +171,9 @@
     .mtn {
         background: transparent url('/media/img/firefox/os/logo/mtn.png') top center no-repeat;
     }
+    .orange {
+        background: transparent url('/media/img/firefox/os/logo/orange.png') top center no-repeat;
+    }
     .last {
         border-right: none;
     }
