--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -72,6 +72,7 @@
           <option value="jp">{{ _('Japan') }}</option>
           <option value="lu">{{ _('Luxembourg') }}</option>
           <option value="mk">{{ _('Macedonia') }}</option>
+          <option value="mg">{{ _('Madagascar') }}</option>
           <option value="mx">{{ _('Mexico') }}</option>
           <option value="me">{{ _('Montenegro') }}</option>
           <option value="mm">{{ _('Myanmar') }}</option>
@@ -2236,6 +2237,187 @@
             </div>{#--/.pager-content--#}
           </div>{#--/.container--#}
         </section>{#--/#au_fx0--#}
+      </div>{#--/.device-detail-list--#}
+
+      <div class="container device-list">
+        <ul class="device-thumbnails">
+          <li>
+            <a href="#orange_klif" class="device-thumbnail">
+              <img src="{{ static('img/firefox/os/devices/smartphones/orange-klif-thumb.png') }}" alt="">
+              <span class="device-name">{{ _('Orange Klif') }}</span>
+              <div class="availability-notice">
+                <span class="is-available">{{ _('Available') }}</span>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="device-detail-list">
+        <section class="device-detail smartphone-detail" id="orange_klif">
+          <div id="orange_klif-pager" class="container pager pager-with-tabs pager-no-history">
+            <header class="device-detail-header">
+              <h3 class="device-title">{{ _('Orange Klif') }}</h3>
+
+              <ul class="pager-tabs">
+                <li><a href="#p1" data-label="Features">{{_('Features')}}</a></li>
+                <li><a href="#p2" data-label="Specifications">{{_('Specifications')}}</a></li>
+              </ul>
+
+              <button class="device-detail-close">{{ _('Close') }}</button>
+            </header>
+
+            <div class="pager-content">
+              <div class="device-details features pager-page default-page" id="orange_klif-features">
+                <div class="feature-group logo-colors">
+                </div>
+
+                <div class="feature-group image">
+                  <img src="{{ static('img/firefox/os/devices/smartphones/orange-klif.png') }}" alt="{{ _('Orange Klif') }}">
+                </div>
+
+                <div class="feature-group stats">
+                  <ul>
+                    <li class="stat-screen">
+                      <strong>{{ _('3.5"') }}</strong>
+                      {{ _('320 x 480 pixels') }}
+                    </li>
+                    <li class="stat-camera">
+                      <strong>{{ _('2.0 MP') }}</strong>
+                      {{ _('Rear camera') }}
+                    </li>
+                    <li class="stat-storage">
+                      <strong>{{ _('512 MB') }}</strong>
+                      {{ _('Internal memory') }} *
+                    </li>
+                    <li class="stat-battery">
+                      <strong>{{ _('7 h') }}</strong>
+                      {{ _('Talk time') }}
+                    </li>
+                  </ul>
+
+                  <small>* {{ memory_disclaimer }}</small>
+                </div>
+
+                <div class="feature-group availability">
+                  <h5>{{ _('Available in') }}</h5>
+
+                  <ul class="comma-list">
+                    <li>{{ _('Madagascar') }}</li>
+                  </ul>
+
+                  <h5>{{ _('Operator') }}</h5>
+
+                  <ul class="comma-list">
+                    <li>{{ _('Orange') }}</li>
+                  </ul>
+                </div>
+              </div>{#--/.features--#}
+              <div class="device-details specifications pager-page" id="orange_klif-specifications">
+                <h4 class="device-details-title">{{ _('Specifications') }}</h4>
+
+                <table>
+                  <tr>
+                    <th>{{ _('Screen') }}</th>
+                    <td>
+                      {{ _('3.5"') }}
+                      {{ _('320 x 480 pixels') }}
+                      <br>
+                      {{ _('TFT capacitive touch') }}
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('Camera') }}</th>
+                    <td>
+                      {{ _('2.0 MP rear, LED flash') }}
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('Dimensions') }}</th>
+                    <td>
+                      {{ _('112.2 x 62 x 11.9 mm') }}
+                      <br>
+                      {{ _('98 g') }}
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('Processor') }}</th>
+                    <td>
+                      {{ _('1.0 GHz') }}
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('Memory') }}</th>
+                    <td>
+                      <dl>
+                        <dt>{{ _('ROM') }} *</dt>
+                        <dd>{{ _('512 MB') }}</dd>
+
+                        <dt>{{ _('RAM') }}</dt>
+                        <dd>{{ _('256 MB') }}</dd>
+
+                        <dt>{{ _('Expansion slot') }}</dt>
+                        <dd>{{ _('Up to 32 GB') }}</dd>
+                      </dl>
+
+                      <small>* {{ memory_disclaimer }}</small>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('GPS') }}</th>
+                    <td>{{ _('GPS / A-GPS') }}</td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('Battery') }}</th>
+                    <td>
+                      <dl>
+                        <dt>{{ _('Capacity') }}</dt>
+                        <dd>{{ _('1300 mAh') }}</dd>
+
+                        <dt>{{ _('Talk time') }}</dt>
+                        <dd>{{ _('Up to 7 h') }}</dd>
+
+                        <dt>{{ _('Music Play') }}</dt>
+                        <dd>{{ _('Up to 40 h') }}</dd>
+
+                        <dt>{{ _('Standby time') }}</dt>
+                        <dd>{{ _('Up to 432 h (2G), 325 h (3G)') }}</dd>
+                      </dl>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('Networks') }}</th>
+                    <td>
+                      {{ _('GSM / HSPA') }}
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('Wireless') }}</th>
+                    <td>
+                      {{ _('Bluetooth v3.0') }}
+                      <br>
+                      {{ _('Wi-Fi 802.11 b/g/n') }}
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('Ports') }}</th>
+                    <td>
+                      {{ _('Micro USB 2.0 high speed') }}
+                      <br>
+                      {{ _('3.5 mm stereo headset jack') }}
+                    </td>
+                  </tr>
+                  <tr>
+                    <th>{{ _('Radio') }}</th>
+                    <td>
+                      {{ _('Stereo FM') }}
+                    </td>
+                  </tr>
+                </table>
+              </div>{#--/.specifications--#}
+            </div>{#--/.pager-content--#}
+          </div>{#--/.container--#}
+        </section>{#--/#orange_klif--#}
       </div>{#--/.device-detail-list--#}
     </section>{#--/#smartphones--#}
 
