Fix Bug 1161783 - [traceback] TypeError: download_firefox() got an unexpected keyword argument 'build' on /styleguide/all-download-buttons/

--- a/bedrock/styleguide/templates/styleguide/websites/sandstone-all-download-buttons.html
+++ b/bedrock/styleguide/templates/styleguide/websites/sandstone-all-download-buttons.html
@@ -30,7 +30,7 @@
         </td>
         <td>
           <div style="width:274px">{# only set with for test no-js buttons #}</div>
-          {{ download_firefox(build='beta') }}
+          {{ download_firefox(channel='beta') }}
         </td>
       </tr>
       <tr>
@@ -39,7 +39,7 @@
           {{ download_firefox(small=True) }}
         </td>
         <td>
-          {{ download_firefox(build='beta', small=True) }}
+          {{ download_firefox(channel='beta', small=True) }}
         </td>
       </tr>
       <tr>
@@ -48,7 +48,7 @@
           {{ download_firefox(icon=False) }}
         </td>
         <td>
-          {{ download_firefox(build='beta', icon=False) }}
+          {{ download_firefox(channel='beta', icon=False) }}
         </td>
       </tr>
       <tr>
@@ -57,7 +57,7 @@
           {{ download_firefox(small=True, icon=False) }}
         </td>
         <td>
-          {{ download_firefox(small=True, icon=False, build='beta') }}
+          {{ download_firefox(small=True, icon=False, channel='beta') }}
         </td>
       </tr>
     </tbody>
@@ -75,7 +75,7 @@
           {{ download_firefox(platform='android') }}
         </td>
         <td>
-          {{ download_firefox(platform='android', build='beta') }}
+          {{ download_firefox(platform='android', channel='beta') }}
         </td>
       </tr>
       <tr>
@@ -84,7 +84,7 @@
           {{ download_firefox(platform='android', small=True) }}
         </td>
         <td>
-          {{ download_firefox(platform='android', small=True, build='beta') }}
+          {{ download_firefox(platform='android', small=True, channel='beta') }}
         </td>
       </tr>
       <tr>
@@ -93,7 +93,7 @@
           {{ download_firefox(platform='android', icon=False) }}
         </td>
         <td>
-          {{ download_firefox(platform='android', icon=False, build='beta') }}
+          {{ download_firefox(platform='android', icon=False, channel='beta') }}
         </td>
       </tr>
       <tr>
@@ -102,7 +102,7 @@
           {{ download_firefox(platform='android', small=True, icon=False) }}
         </td>
         <td>
-          {{ download_firefox(platform='android', small=True, icon=False, build='beta') }}
+          {{ download_firefox(platform='android', small=True, icon=False, channel='beta') }}
         </td>
       </tr>
     </tbody>
